@@ -245,7 +245,7 @@ public class BookingController {
      * Populates the necessary JFrame components of the idol's details.
      */
     private void populateIdolDetails() {
-        ImageIcon icon = new ImageIcon(model.getIdolDetails().getFirst());
+        ImageIcon icon = new ImageIcon(model.getIdolDetails().get(0));
         Image image = icon.getImage().getScaledInstance(533, 300, Image.SCALE_SMOOTH);
         view.getLblIdolPfp().setIcon(new ImageIcon(image));
 
